--- a/pages/index.css
+++ b/pages/index.css
@@ -146,3 +146,116 @@ line-height: 30px;
 color: #fff;
 }
 
+.reservation{
+   padding: 100px 0 120px;
+   background-color: #D9E7FF;
+   background-image: url(../images/background_reservation.svg);
+   background-size: cover;
+   background-repeat: no-repeat;
+}
+
+.reservation__title{
+    font-family: Inter;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 20px;
+}
+
+.reservation__title{
+    text-align: center;
+    margin: 0 0 80px;
+    color: #000;
+}
+
+.reservation__form{
+    margin: 0 auto;
+}
+
+.form{
+    max-width: 385px;
+}
+
+.form__input{
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 8px 0 32px;
+    border-radius: 4px;
+    padding: 15px 20px;
+    color: #000;
+}
+
+.form__input::placeholder {
+ font-family: Inter;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 30px;
+color: #838383;
+}
+
+.form__lable{
+ padding: 0 0 10px;
+ font-family: Inter;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 20px;
+color: #000;
+}
+
+.form__fieldset{
+    margin: 0;
+    padding: 0;
+    border: none;
+    border: 1px solid #838383;
+}
+
+.form__button{
+border-radius: 4px;
+width: 100%;
+border: none;
+padding: 20px 0;
+margin-bottom: 32px;
+background-color: #1878dc;
+transition: ease-in 0.5s;
+font-family: Inter;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 20px;
+color: #fff;
+}
+
+.form__button:hover {
+background-color: #3f96f3;
+}
+
+.form__checkbox{
+border-radius: 2px;
+width: 20px;
+height: 20px;
+}
+
+.form__label_type_checkbox{
+display: flex;
+gap: 12px;
+background-color: #1878DC;
+background-image: url(../images/check.svg);
+justify-content: center;
+background-position: left; 
+background-repeat: no-repeat;
+font-family: Inter;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 20px;
+transition: ease-in 0.5s;
+}
+
+
+.form__label_type_checkbox:hover{
+    background-color: #3f96f3;
+    
+}
