--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -12,6 +12,9 @@ font-weight: 500;
  text-align: center;
     margin: 0 0 80px;
     color: #000;
+font-weight: 500;
+font-size: 44px;
+line-height: 52px;
 }
 
 .reservation__form{
