--- a/pages/index.css
+++ b/pages/index.css
@@ -6,7 +6,7 @@
 @import url(../blocks/form.css);
 @import url(../blocks/menu.css);
 @import url(../blocks/nav.css);
-@import url(..//blocks/cards.css);
+@import url(..//blocks/card.css);
 @import url(..//blocks/about.css);
 @import url(../blocks/footer.css);
 
