--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -14,7 +14,7 @@
 
 .footer__logo{
 width: 105px;
-height: 109px;
+height: 39px;
 margin: 0;
 }
 
@@ -33,7 +33,7 @@ font-family: "Inter", arial, sans-serif;
 font-weight: bold;
 }
 
-.footer__social_link{
+.footer__social-link{
  color: #fff;  
  text-decoration: none;
  margin: 0;
@@ -42,7 +42,7 @@ font-weight: bold;
  align-items: center;
 }
 
-.footer__social_link:hover{
+.footer__social-link:hover{
    color:#C1C1C1 ; 
 }
 
@@ -51,7 +51,7 @@ font-weight: bold;
    font-family: "Inter", arial, sans-serif;
 }
 
-.footer__social_icon{
+.footer__social-icon{
     width: 16px;
     height: 16px;
     margin-right:10px ;
