--- a/blocks/form.css
+++ b/blocks/form.css
@@ -41,7 +41,8 @@ border: none;
 padding: 20px 0;
 margin-bottom: 32px;
 background-color: #1878dc;
-transition: ease-in 0.5s;
+cursor: pointer;
+transition: background-color 0.5s ease-in;
 font-family: "Inter", arial, sans-serif;
 font-weight: 500;
 color: #fff;
