--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -4,6 +4,10 @@
     flex-direction: column;
     align-items: center;
     font-family: "Inter", arial, sans-serif;
+    background-color: #fff;
+    background-image: url(../images/background_menu.svg);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .menu__title{
